# zephyr

./: west.yml
modules/trusted-firmware-m/: CMakeLists.txt
samples/net/sockets/http_client/src/: main.c
samples/tfm_integration/psa_custom_service/: prj.conf
samples/tfm_integration/psa_custom_service/src/: main.c
samples/tfm_integration/psa_level_1/: CMakeLists.txt  prj.conf
samples/tfm_integration/psa_level_1/src/: main.c
samples/tfm_integration/psa_level_1/src/tls_config/: user-tls.conf
samples/tfm_integration/tfm_secure_inference/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/tfm_integration/tfm_secure_inference/src/: main.c  tfm_tflm_service_api.c  tfm_tflm_service_api.h  util_sformat.c
samples/tfm_integration/tfm_secure_inference/tfm_secure_inference_partitions/: tfm_manifest_list.yaml.in
samples/tfm_integration/tfm_secure_inference/tfm_secure_inference_partitions/tfm_huk_key_derivation_service/: CMakeLists.txt  tfm_huk_key_derivation_service.c  tfm_huk_key_derivation_service.yaml  tfm_huk_key_derivation_service_api.c  tfm_huk_key_derivation_service_api.h
samples/tfm_integration/tfm_secure_inference/tfm_secure_inference_partitions/tfm_tflm_service/: CMakeLists.txt  README.md  cbor_cose.c  cbor_cose.h  cbor_cose_api.h  tfm_tflm_service.c  tfm_tflm_service.yaml
samples/tfm_integration/tfm_secure_inference/tfm_secure_inference_partitions/tfm_tflm_service/tflm/: CMakeLists.txt
samples/tfm_integration/tfm_secure_provisioning/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/tfm_integration/tfm_secure_provisioning/src/: http.c  main.c  psa_crypto.c  psa_crypto.h  tfm_secure_provisioning_api.c  tfm_secure_provisioning_api.h  util_app_log.c  util_app_log.h  util_sformat.h
samples/tfm_integration/tfm_secure_provisioning/tfm_secure_provisioning_partition/: CMakeLists.txt  tfm_manifest_list.yaml.in  tfm_secure_provisioning_partition.c  tfm_secure_provisioning_partition.yaml
